--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/nonoroazoro/string-searching"
   },
   "scripts": {
     "start": "node ./app",
