--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "string-searching",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Fast string searching algorithms.",
   "main": "index.js",
   "author": {
@@ -11,11 +11,19 @@
     "type": "git",
     "url": "https://github.com/nonoroazoro/string-searching"
   },
-  "keywords": [
-    "boyer-moore",
-    "string-searching",
-    "algorithm"
-  ],
+    "keywords":
+    [
+        "search",
+        "text search",
+        "text-search",
+        "string search",
+        "string-search",
+        "string searching",
+        "string-searching",
+        "boyer moore",
+        "boyer-moore",
+        "algorithm"
+    ],
   "scripts": {
     "test": "mocha"
   },
