--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,28 @@
-﻿*.sublime-project
+﻿# Editor files
+*.sublime-project
 *.sublime-workspace
+.vs
+typings
 
+# Compiled source
 *.dat
 *.dll
-*.DS_Store
+*.exe
 *.log
 *.suo
 *.tmp
 *.user
- 
-/.vs/
-/db/
-/node_modules/
-/obj/
+obj
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+# Node
+node_modules
